--- a/stylesheets/objects.css
+++ b/stylesheets/objects.css
@@ -1,5 +1,5 @@
 .circle {
-  background-color: #000;
+  background-color: #ffffff;
   border-radius: 50%;
   height: 300px;
   width: 300px;
